mType/tests/testFiles/import/pass/reexportChain/ModB.mt
import { ChainMid } from "./ModC.mt";

public class ChainTop extends ChainMid {
}
